# UFphisher

./: README.md  UFphisher.py
files/: Dockerfile  pyproject.toml
